--- a/src/README
+++ b/src/README
@@ -3,10 +3,16 @@
 Author: Charlie Lovering
 
 General:
-This project consists of a SlidingPaneFX.SlidingPane class that can be used to create a pane that slides either left and right or up and down.
+This small 'library' consists of a couple components. 
+
+The SlidingPane component consists of a class that can be used to create a pane that slides either left and right or up and down. 
+The ZoomAndPan allows the Group to zoomed to (by the mouse) and panned by dragging.
+
 
 Usage:
-Can be found by example in SlidingPaneFX.Example.java.
+It usage be found by example in Example.java. The code can be modified to change the type of the pane (VBox, HBox, AnchorPane - etc). 
 
 Credits:
-This project made use of a post originally found on stackoverflow (https://gist.github.com/jewelsea/1437374).
+These components were orginally made for https://github.com/jrhackett/cs3733-team9.
+The zoomandpan was orginally created by https://github.com/jcfriscia.
+The slidingpane made use of a post originally found on stackoverflow (https://gist.github.com/jewelsea/1437374).
