--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ~README!~
 
-Author: Charlie Lovering
+Authors: Charlie Lovering, Josh Friscia
 
 General:
 This small 'library' consists of a couple components. 
